--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Cifrado César</title>
 </head>
 
 <body>
-  <textarea id="cadena"></textarea>
-  <p>
-    <input type="button" value="codificar" onclick="codificar()">
-    <input type="button" value="decodificar" onclick="decodificar()">
-  </p>
-  <div id="resultado"></div>
-
+  <section id="box">
+    <h1>Cifrado Cesar</h1>
+    <h2>Ingrese la frase </h2>
+    <textarea id="cadena"></textarea>
+    <p>
+      <input id="btn" type="button" value="codificar" onclick="codificar()">
+      <input id="btn" type="button" value="decodificar" onclick="decodificar()">
+    </p>
+    <div id="resultado"></div>
+    <!--
+    <input type="text" id="input" placeholder="Texto a cifrar">
+    <button id="cifrar">Cifrar Texto</button>
+    <hr>
+    <input type="text" id="output" placeholder="Aqui aparecera el texto cifrado">
+    <button id="descifrar">Descifrar Texto</button>
+  -->
+  </section>
 
   <script src="js/app.js"></script>
 </body>
